right white space bug fixed

--- a/style.css
+++ b/style.css
@@ -670,9 +670,18 @@ video {
   border-width: 1px;
 }
 
+.border-8 {
+  border-width: 8px;
+}
+
 .border-brand-nude {
   --tw-border-opacity: 1;
   border-color: rgb(168 151 123 / var(--tw-border-opacity));
+}
+
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
 }
 
 .border-white {
@@ -1040,16 +1049,21 @@ video {
 }
 
 @media (min-width: 1280px) {
-  .xl\:col-span-2 {
-    grid-column: span 2 / span 2;
-  }
-
   .xl\:col-span-1 {
     grid-column: span 1 / span 1;
   }
 
+  .xl\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
   .xl\:row-span-2 {
     grid-row: span 2 / span 2;
+  }
+
+  .xl\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
   }
 
   .xl\:mx-72 {
@@ -1085,16 +1099,6 @@ video {
     justify-content: space-between;
   }
 
-  .xl\:bg-slate-50 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-  }
-
-  .xl\:bg-slate-400 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-  }
-
   .xl\:p-14 {
     padding: 3.5rem;
   }
@@ -1125,6 +1129,10 @@ video {
 
   .xl\:text-left {
     text-align: left;
+  }
+
+  .xl\:text-center {
+    text-align: center;
   }
 
   .xl\:text-4xl {
